--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npx ts-node src/index.ts",
-    "serve": "node src/index.js"
+    "serve": "ts-node src/app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
+    "@types/filesystem": "^0.0.32",
+    "@types/load-json-file": "^5.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "load-json-file": "^7.0.1"
   }
 }
