--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "load-json-file": "^7.0.1"
+    "fetch": "^1.1.0",
+    "load-json-file": "^7.0.1",
+    "node-fetch": "^3.2.10"
   }
 }
