--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "rcm-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "ts-node src/app.ts"
+    "serve": "node dist/server.js"
   },
   "keywords": [],
   "author": "",
