--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,13 @@
-version: '3.8'
-
+version: "3.8"
 services:
   app:
-    build: ./
-    env_file: ./.env
+    container_name: rcm_app
+    restart: always
+    build:
+      context: .
+      dockerfile: Dockerfile
+    env_file: .env
     ports:
-      - $NODE_HOST_PORT:$NODE_DOCKER_PORT
-    tty: true
+      - 8080:8080
+    environment:
+      - DB_PASSWORD="arangodb@rcm"
