--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
   "name": "rcm-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "RCM",
   "main": "dist/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "node dist/server.js"
+    "build": "tsc -p .",
+    "dev": "ts-node src/server.ts",
+    "start": "ts-node dist/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.2",
     "@types/express": "^4.17.13",
     "@types/filesystem": "^0.0.32",
-    "@types/load-json-file": "^5.1.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.2"
+    "@types/load-json-file": "^5.1.0"
   },
   "dependencies": {
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fetch": "^1.1.0",
-    "load-json-file": "^7.0.1",
-    "node-fetch": "^3.2.10"
+    "node-fetch": "^3.2.10",
+    "load-json-file": "^7.0.1"
   }
 }
