set up arangodb

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,8 +2,24 @@ version: '3.8'
 
 services:
   app:
+    depends_on:
+      - db
     build: ./
     env_file: ./.env
     ports:
       - $NODE_HOST_PORT:$NODE_DOCKER_PORT
     tty: true
+
+  db:
+    image: arangodb:3.9
+    environment:
+      - ARANGO_ROOT_PASSWORD=$ARANGO_ROOT_PASSWORD
+    ports:
+      - 8529:8529
+    volumes:
+      - arangodb_data_container:/var/lib/arangodb3
+      - arangodb_apps_data_container:/var/lib/arangodb3-apps
+
+volumes:
+  arangodb_data_container:
+  arangodb_apps_data_container:
