--- a/package.json
+++ b/package.json
@@ -12,18 +12,19 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "ts-node": "^10.9.1",
-    "typescript": "^4.8.2",
     "@types/express": "^4.17.13",
     "@types/filesystem": "^0.0.32",
-    "@types/load-json-file": "^5.1.0"
+    "@types/load-json-file": "^5.1.0",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.2"
   },
   "dependencies": {
+    "arangojs": "^6.14.1",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fetch": "^1.1.0",
-    "node-fetch": "^3.2.10",
-    "load-json-file": "^7.0.1"
+    "load-json-file": "^7.0.1",
+    "node-fetch": "^3.2.10"
   }
 }
