--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "dist/server.js",
   "scripts": {
     "build": "tsc -p .",
-    "dev": "ts-node src/server.ts",
+    "dev": "nodemon src/server.ts",
     "start": "ts-node dist/server.js"
   },
   "keywords": [],
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.13",
     "@types/filesystem": "^0.0.32",
     "@types/load-json-file": "^5.1.0",
+    "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
   },
