Update env example

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,11 @@
+# App config
 NODE_HOST_PORT=4000
 NODE_DOCKER_PORT=8080
 
+# DB config
+ARANGO_HOST_URL=http://localhost:8529
 ARANGO_HOST_PORT=8529
 ARANGO_DOCKER_PORT=8529
-
+ARANGO_DB_NAME=
+ARANGO_USER_NAME=
 ARANGO_ROOT_PASSWORD=
