--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: '3.9'
 
 services:
   app:
@@ -9,7 +9,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    env_file: .env
+    env_file: ./.env
     ports:
       - $NODE_HOST_PORT:$NODE_DOCKER_PORT
     volumes:
@@ -18,6 +18,7 @@ services:
   db:
     image: arangodb:3.9
     container_name: rcm_db
+    restart: always
     environment:
       - ARANGO_ROOT_PASSWORD=$ARANGO_ROOT_PASSWORD
     ports:
