--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,22 +2,23 @@ version: '3.9'
 
 services:
   app:
-    depends_on:
-      - db
-    container_name: rcm_app
-    restart: always
     build:
       context: .
       dockerfile: Dockerfile
-    env_file: ./.env
+    container_name: rcm_app_dev
+    depends_on:
+      - db
+    restart: always
+    env_file: .env
     ports:
       - $NODE_HOST_PORT:$NODE_DOCKER_PORT
     volumes:
       - ./src:/app/src
+      - /app/node_modules
 
   db:
     image: arangodb:3.9
-    container_name: rcm_db
+    container_name: rcm_db_dev
     restart: always
     environment:
       - ARANGO_ROOT_PASSWORD=$ARANGO_ROOT_PASSWORD
