--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "arangojs": "^6.14.1",
     "axios": "^0.27.2",
+    "chalk": "^5.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fetch": "^1.1.0",
