--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "dist/server.js",
   "scripts": {
     "build": "tsc -p .",
-    "dev": "nodemon src/server.ts",
-    "start": "ts-node dist/server.js"
+    "dev": "npm run lint && nodemon src/server.ts",
+    "start": "ts-node dist/server.js",
+    "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +16,9 @@
     "@types/express": "^4.17.13",
     "@types/filesystem": "^0.0.32",
     "@types/load-json-file": "^5.1.0",
+    "@typescript-eslint/eslint-plugin": "^5.37.0",
+    "@typescript-eslint/parser": "^5.37.0",
+    "eslint": "^8.23.1",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
