--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,8 @@
       "plugin:@typescript-eslint/recommended"
     ],
     "rules": {
-        "semi": ["error", "always"]
+        "semi": ["error", "always"],
+        "quotes": [ "error", "single"]
     },
     // All node globals goes here
     "globals": {
