--- a/.eslintrc
+++ b/.eslintrc
@@ -11,7 +11,8 @@
     ],
     "rules": {
         "semi": ["error", "always"],
-        "quotes": [ "error", "single"]
+        "quotes": [ "error", "single"],
+        "indent": ["error", 2]
     },
     // All node globals goes here
     "globals": {
