--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # App config
 NODE_HOST_PORT=4000
-NODE_DOCKER_PORT=8080
+NODE_DOCKER_PORT=4000
 
 # DB config
-ARANGO_HOST_URL=http://db:8529
+ARANGO_HOST_URL=http://db
 ARANGO_HOST_PORT=8529
 ARANGO_DOCKER_PORT=8529
 ARANGO_DB_NAME=rcm
