--- a/.eslintrc
+++ b/.eslintrc
@@ -11,9 +11,10 @@
     ],
     // Enforced code style
     "rules": {
-        "semi": ["error", "always"],
-        "quotes": [ "error", "single"],
-        "indent": ["error", 2]
+      "indent": ["error", 2],
+      "semi": ["error", "always"],
+      "quotes": [ "error", "single"],
+      "@typescript-eslint/no-explicit-any": "off"
     },
     // All node globals goes here
     "globals": {
