--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "arangojs": "^7.8.0",
     "axios": "^0.27.2",
     "chalk": "^5.0.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fetch": "^1.1.0",
