--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
   "scripts": {
     "build": "tsc -p .",
     "dev": "npm run lint && nodemon src/server.ts",
-    "start": "ts-node dist/server.js",
+    "start": "nodemon dist/server.js",
     "lint": "eslint . --ext .ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/filesystem": "^0.0.32",
     "@types/load-json-file": "^5.1.0",
@@ -28,7 +27,6 @@
     "arangojs": "^7.8.0",
     "axios": "^0.27.2",
     "chalk": "^5.0.1",
-    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fetch": "^1.1.0",
